# mastori

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  Pipfile  Procfile  README.md  compose.yml  contributions.md  docker-compose.yaml  docker-compose.yml  env.sample  manage.py  procfile  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/: .git_commit_template  auto-assign.yml  auto-assing.yaml  pull_request_template.md
.github/workflows/: django-postgres-ci.yml  django.yml  jambo.yaml
CMS/: __init__.py  asgi.py  celery.py  my_settings.py  procfile  runtime.txt  settings.py  urls.py  wsgi.py
accounts/: admin.py  apps.py  models.py  permission.py  permissions.py  serializer.py  serializers.py  tests.py  throttles.py  tokens.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_verification_code.py  0002_initial.py  0002_user_verification_code.py  0002_user_verification_code_account.py  0003_alter_user_email.py  0003_alter_user_phone_number.py  0003_alter_user_verification_code.py  0004_alter_account_bio_alter_account_display_picture.py  0004_alter_account_display_picture.py  0004_alter_account_user.py  0004_alter_account_user_alter_user_verification_code.py  0004_alter_user_verification_code.py  0005_alter_user_verification_code.py  0005_rename_name_account_account_name.py  0006_alter_user_first_name_alter_user_last_name_and_more.py  0006_alter_user_phone_number.py  0006_alter_user_verification_code.py  0007_alter_user_phone_number.py  0007_alter_user_verification_code.py  (+9 more)
blog/: admin.py  filters.py  models.py  permissions.py  serializers.py  throttles.py  urls.py  utils.py  views.py
mail/: __init__.py  email.py  tasks.py  tests.py
post/: models.py
tests/: models.py
(+77 files in other folders)
