[tool.poetry]
name = "mastori"
version = "0.1.0"
description = "Mastori is a community-driven open-source project that aims to provide a simple and efficient blogging platform built with the Django Rest Framework."
authors = ["SpaceYaTech"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
djangorestframework = "^3.14.0"
djoser = "^2.2.0"
black = "^23.11.0"
boto3 = "^1.29.4"
celery = "^5.3.5"
django-ckeditor = "^6.7.0"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
django-filter = "^23.4"
django-jazzmin = "^2.6.0"
django-phonenumber-field = "^7.2.0"
django-rest-swagger = "^2.2.0"
django-storages = "^1.14.2"
django-templated-email = "^3.0.1"
drf-nested-routers = "^0.93.4"
drf-spectacular = "^0.26.5"
gunicorn = "^21.2.0"
model-bakery = "^1.17.0"
phonenumbers = "^8.13.25"
pillow = "^10.1.0"
pipdeptree = "^2.13.1"
pipreqs = "^0.4.13"
psycopg2-binary = "^2.9.9"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
redis = "^5.0.1"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
